Ejercicio 1 y 2/generados/gramaticaBNRParser.py
# Generated from gramaticaBNR.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramaticaBNRParser ( Parser ):

    grammarFileName = "gramaticaBNR.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "','", "'}'", "':'", "'='", 
                     "'('", "')'", "'=='", "'!='", "'>'", "'<'", "'>='", 
                     "'<='", "'['", "']'", "'INSERT'", "'INTO'", "'FIND'", 
                     "'WHERE'", "'UPDATE'", "'SET'", "'DELETE'", "'FROM'", 
                     "'AND'", "'OR'", "'NOT'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INSERT", "INTO", "FIND", "WHERE", "UPDATE", 
                      "SET", "DELETE", "FROM", "AND", "OR", "NOT", "ID", 
                      "NUMBER", "STRING", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_insert = 2
    RULE_find = 3
    RULE_update = 4
    RULE_delete = 5
    RULE_document = 6
    RULE_pair = 7
    RULE_assignments = 8
    RULE_assignment = 9
    RULE_condition = 10
    RULE_expression = 11
    RULE_comparison = 12
    RULE_operator = 13
    RULE_value = 14
    RULE_array = 15

    ruleNames =  [ "program", "statement", "insert", "find", "update", "delete", 
                   "document", "pair", "assignments", "assignment", "condition", 
                   "expression", "comparison", "operator", "value", "array" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    INSERT=17
    INTO=18
    FIND=19
    WHERE=20
    UPDATE=21
    SET=22
    DELETE=23
    FROM=24
    AND=25
    OR=26
    NOT=27
    ID=28
    NUMBER=29
    STRING=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(gramaticaBNRParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaBNRParser.StatementContext)
            else:
                return self.getTypedRuleContext(gramaticaBNRParser.StatementContext,i)


        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = gramaticaBNRParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 11141120) != 0):
                self.state = 32
                self.statement()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 38
            self.match(gramaticaBNRParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def insert(self):
            return self.getTypedRuleContext(gramaticaBNRParser.InsertContext,0)


        def find(self):
            return self.getTypedRuleContext(gramaticaBNRParser.FindContext,0)


        def update(self):
            return self.getTypedRuleContext(gramaticaBNRParser.UpdateContext,0)


        def delete(self):
            return self.getTypedRuleContext(gramaticaBNRParser.DeleteContext,0)


        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = gramaticaBNRParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 40
                self.insert()
                self.state = 41
                self.match(gramaticaBNRParser.T__0)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.find()
                self.state = 44
                self.match(gramaticaBNRParser.T__0)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.update()
                self.state = 47
                self.match(gramaticaBNRParser.T__0)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.delete()
                self.state = 50
                self.match(gramaticaBNRParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(gramaticaBNRParser.INSERT, 0)

        def INTO(self):
            return self.getToken(gramaticaBNRParser.INTO, 0)

        def ID(self):
            return self.getToken(gramaticaBNRParser.ID, 0)

        def document(self):
            return self.getTypedRuleContext(gramaticaBNRParser.DocumentContext,0)


        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_insert

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsert" ):
                listener.enterInsert(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsert" ):
                listener.exitInsert(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInsert" ):
                return visitor.visitInsert(self)
            else:
                return visitor.visitChildren(self)




    def insert(self):

        localctx = gramaticaBNRParser.InsertContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_insert)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(gramaticaBNRParser.INSERT)
            self.state = 55
            self.match(gramaticaBNRParser.INTO)
            self.state = 56
            self.match(gramaticaBNRParser.ID)
            self.state = 57
            self.document()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIND(self):
            return self.getToken(gramaticaBNRParser.FIND, 0)

        def ID(self):
            return self.getToken(gramaticaBNRParser.ID, 0)

        def WHERE(self):
            return self.getToken(gramaticaBNRParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(gramaticaBNRParser.ConditionContext,0)


        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_find

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFind" ):
                listener.enterFind(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFind" ):
                listener.exitFind(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFind" ):
                return visitor.visitFind(self)
            else:
                return visitor.visitChildren(self)




    def find(self):

        localctx = gramaticaBNRParser.FindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_find)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(gramaticaBNRParser.FIND)
            self.state = 60
            self.match(gramaticaBNRParser.ID)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 61
                self.match(gramaticaBNRParser.WHERE)
                self.state = 62
                self.condition()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UPDATE(self):
            return self.getToken(gramaticaBNRParser.UPDATE, 0)

        def ID(self):
            return self.getToken(gramaticaBNRParser.ID, 0)

        def SET(self):
            return self.getToken(gramaticaBNRParser.SET, 0)

        def assignments(self):
            return self.getTypedRuleContext(gramaticaBNRParser.AssignmentsContext,0)


        def WHERE(self):
            return self.getToken(gramaticaBNRParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(gramaticaBNRParser.ConditionContext,0)


        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_update

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdate" ):
                listener.enterUpdate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdate" ):
                listener.exitUpdate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpdate" ):
                return visitor.visitUpdate(self)
            else:
                return visitor.visitChildren(self)




    def update(self):

        localctx = gramaticaBNRParser.UpdateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_update)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(gramaticaBNRParser.UPDATE)
            self.state = 66
            self.match(gramaticaBNRParser.ID)
            self.state = 67
            self.match(gramaticaBNRParser.SET)
            self.state = 68
            self.assignments()
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 69
                self.match(gramaticaBNRParser.WHERE)
                self.state = 70
                self.condition()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELETE(self):
            return self.getToken(gramaticaBNRParser.DELETE, 0)

        def FROM(self):
            return self.getToken(gramaticaBNRParser.FROM, 0)

        def ID(self):
            return self.getToken(gramaticaBNRParser.ID, 0)

        def WHERE(self):
            return self.getToken(gramaticaBNRParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(gramaticaBNRParser.ConditionContext,0)


        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_delete

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelete" ):
                listener.enterDelete(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelete" ):
                listener.exitDelete(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDelete" ):
                return visitor.visitDelete(self)
            else:
                return visitor.visitChildren(self)




    def delete(self):

        localctx = gramaticaBNRParser.DeleteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_delete)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(gramaticaBNRParser.DELETE)
            self.state = 74
            self.match(gramaticaBNRParser.FROM)
            self.state = 75
            self.match(gramaticaBNRParser.ID)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 76
                self.match(gramaticaBNRParser.WHERE)
                self.state = 77
                self.condition()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaBNRParser.PairContext)
            else:
                return self.getTypedRuleContext(gramaticaBNRParser.PairContext,i)


        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = gramaticaBNRParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(gramaticaBNRParser.T__1)
            self.state = 81
            self.pair()
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 82
                self.match(gramaticaBNRParser.T__2)
                self.state = 83
                self.pair()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self.match(gramaticaBNRParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(gramaticaBNRParser.ID, 0)

        def value(self):
            return self.getTypedRuleContext(gramaticaBNRParser.ValueContext,0)


        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_pair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPair" ):
                listener.enterPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPair" ):
                listener.exitPair(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPair" ):
                return visitor.visitPair(self)
            else:
                return visitor.visitChildren(self)




    def pair(self):

        localctx = gramaticaBNRParser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_pair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(gramaticaBNRParser.ID)
            self.state = 92
            self.match(gramaticaBNRParser.T__4)
            self.state = 93
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaBNRParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(gramaticaBNRParser.AssignmentContext,i)


        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_assignments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignments" ):
                listener.enterAssignments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignments" ):
                listener.exitAssignments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignments" ):
                return visitor.visitAssignments(self)
            else:
                return visitor.visitChildren(self)




    def assignments(self):

        localctx = gramaticaBNRParser.AssignmentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.assignment()
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 96
                self.match(gramaticaBNRParser.T__2)
                self.state = 97
                self.assignment()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(gramaticaBNRParser.ID, 0)

        def value(self):
            return self.getTypedRuleContext(gramaticaBNRParser.ValueContext,0)


        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = gramaticaBNRParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(gramaticaBNRParser.ID)
            self.state = 104
            self.match(gramaticaBNRParser.T__5)
            self.state = 105
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(gramaticaBNRParser.ExpressionContext,0)


        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = gramaticaBNRParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(gramaticaBNRParser.NOT, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaBNRParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(gramaticaBNRParser.ExpressionContext,i)


        def comparison(self):
            return self.getTypedRuleContext(gramaticaBNRParser.ComparisonContext,0)


        def AND(self):
            return self.getToken(gramaticaBNRParser.AND, 0)

        def OR(self):
            return self.getToken(gramaticaBNRParser.OR, 0)

        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = gramaticaBNRParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27]:
                self.state = 110
                self.match(gramaticaBNRParser.NOT)
                self.state = 111
                self.expression(3)
                pass
            elif token in [28]:
                self.state = 112
                self.comparison()
                pass
            elif token in [7]:
                self.state = 113
                self.match(gramaticaBNRParser.T__6)
                self.state = 114
                self.expression(0)
                self.state = 115
                self.match(gramaticaBNRParser.T__7)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 127
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 125
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = gramaticaBNRParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 119
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 120
                        self.match(gramaticaBNRParser.AND)
                        self.state = 121
                        self.expression(6)
                        pass

                    elif la_ == 2:
                        localctx = gramaticaBNRParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 122
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 123
                        self.match(gramaticaBNRParser.OR)
                        self.state = 124
                        self.expression(5)
                        pass

             
                self.state = 129
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(gramaticaBNRParser.ID, 0)

        def operator(self):
            return self.getTypedRuleContext(gramaticaBNRParser.OperatorContext,0)


        def value(self):
            return self.getTypedRuleContext(gramaticaBNRParser.ValueContext,0)


        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison" ):
                return visitor.visitComparison(self)
            else:
                return visitor.visitChildren(self)




    def comparison(self):

        localctx = gramaticaBNRParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_comparison)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(gramaticaBNRParser.ID)
            self.state = 131
            self.operator()
            self.state = 132
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperator" ):
                return visitor.visitOperator(self)
            else:
                return visitor.visitChildren(self)




    def operator(self):

        localctx = gramaticaBNRParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 32256) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(gramaticaBNRParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(gramaticaBNRParser.NUMBER, 0)

        def document(self):
            return self.getTypedRuleContext(gramaticaBNRParser.DocumentContext,0)


        def array(self):
            return self.getTypedRuleContext(gramaticaBNRParser.ArrayContext,0)


        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = gramaticaBNRParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_value)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(gramaticaBNRParser.STRING)
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(gramaticaBNRParser.NUMBER)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 138
                self.document()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 4)
                self.state = 139
                self.array()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaBNRParser.ValueContext)
            else:
                return self.getTypedRuleContext(gramaticaBNRParser.ValueContext,i)


        def getRuleIndex(self):
            return gramaticaBNRParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):
